--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
             <p class="second-text"><a href="assigment3/index.html">Assigment3</a></p>
         </div>
 
-        <!-- <div class="card red">
+        <div class="card red">
             <p class="tip">Hover Me</p>
             <p class="second-text"><a href="assigment4/index.html">Chapter4</a></p>
         </div>
 
-        <div class="card blue">
+        <!-- <div class="card blue">
             <p class="tip">Hover Me</p>
             <p class="second-text"><a href="assigment5/index.html">Chapter5</a></p>
         </div>
