--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
             <p class="second-text"><a href="assigment4/index.html">Chapter4</a></p>
         </div>
 
-        <!-- <div class="card blue">
+        <div class="card blue">
             <p class="tip">Hover Me</p>
             <p class="second-text"><a href="assigment5/index.html">Chapter5</a></p>
         </div>
 
-        <div class="card green">
+        <!-- <div class="card green">
             <p class="tip">Hover Me</p>
             <p class="second-text"><a href="assigment6/index.html">Chapter6</a></p>
         </div> -->
