--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
             <p class="second-text"><a href="assigment5/index.html">Chapter5</a></p>
         </div>
 
-        <!-- <div class="card green">
+         <div class="card green">
             <p class="tip">Hover Me</p>
-            <p class="second-text"><a href="assigment6/index.html">Chapter6</a></p>
-        </div> -->
+            <p class="second-text"><a href="assigment6/index.html">Chapter13</a></p>
+        </div> 
 
     </div>
     
