--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
             <p class="tip">Hover Me</p>
             <p class="second-text"><a href="assigment7/index.html">Chapter14</a></p>
         </div> 
+
+        <div class="card green">
+            <p class="tip">Hover Me</p>
+            <p class="second-text"><a href="assigment8/index.html">Chapter14</a></p>
+        </div> 
+
     </div>
     
 </body>
