--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
             <p class="tip">Hover Me</p>
             <p class="second-text"><a href="assigment6/index.html">Chapter13</a></p>
         </div> 
-        <div class="card green">
+        <div class="card red">
             <p class="tip">Hover Me</p>
             <p class="second-text"><a href="assigment7/index.html">Chapter14</a></p>
         </div> 
 
-        <div class="card green">
+        <div class="card blue">
             <p class="tip">Hover Me</p>
             <p class="second-text"><a href="assigment8/index.html">Chapter15</a></p>
         </div> 
@@ -57,6 +57,11 @@
         <div class="card green">
             <p class="tip">Hover Me</p>
             <p class="second-text"><a href="assigment9/index.html">Chapter16</a></p>
+        </div> 
+
+        <div class="card red ">
+            <p class="tip">Hover Me</p>
+            <p class="second-text"><a href="assigment10/index.html">Chapter17</a></p>
         </div> 
 
     </div>
