--- a/index.html
+++ b/index.html
@@ -64,6 +64,11 @@
             <p class="second-text"><a href="assigment10/index.html">Chapter17</a></p>
         </div> 
 
+        <div class="card blue ">
+            <p class="tip">Hover Me</p>
+            <p class="second-text"><a href="assigment11/index.html">Chapter18</a></p>
+        </div> 
+
     </div>
     
 </body>
