--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
             <p class="second-text"><a href="assigment12/index.html">Chapter19</a></p>
         </div>
 
+        <div class="card red ">
+            <p class="tip">Hover Me</p>
+            <p class="second-text"><a href="assigment13/index.html">Image Gallery</a></p>
+        </div>
+
     </div>
     
 </body>
