--- a/index.html
+++ b/index.html
@@ -79,6 +79,11 @@
             <p class="second-text"><a href="assigment13/index.html">Image Gallery</a></p>
         </div>
 
+        <div class="card blue ">
+            <p class="tip">Hover Me</p>
+            <p class="second-text"><a href="assigment14/index.html">Text Editor</a></p>
+        </div>
+
     </div>
     
 </body>
