--- a/index.html
+++ b/index.html
@@ -89,6 +89,11 @@
             <p class="second-text"><a href="assigment15/index.html">Finance App</a></p>
         </div>
 
+        <div class="card red ">
+            <p class="tip">Hover Me</p>
+            <p class="second-text"><a href="assigment16/index.html">Local Storage</a></p>
+        </div>
+
     </div>
     
 </body>
