--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
             <p class="tip">Hover Me</p>
             <p class="second-text"><a href="assigment16/index.html">Local Storage</a></p>
         </div>
+        <div class="card blue ">
+            <p class="tip">Hover Me</p>
+            <p class="second-text"><a href="assigment17/index.html">Product Search and Filter</a></p>
+        </div>
 
     </div>
     
