--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@
             <p class="tip">Hover Me</p>
             <p class="second-text"><a href="assigment17/index.html">Product Search and Filter</a></p>
         </div>
+        <div class="card green ">
+            <p class="tip">Hover Me</p>
+            <p class="second-text"><a href="assigment18/index.html">FireBase Authentication</a></p>
+        </div>
 
     </div>
     
